# InfusionDeviceLogAnalyser

./: About.md.md  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt
RAG_DATA/: battStatus_cache.json  chunkdemo.txt
RAG_DATA/BitsDef/: BatteryStatus.txt  ChargerStatus.txt  GaugeStatus.txt  OperationalStatus.txt  ProtectionFaultAlert.txt  ProtectionFaultStatus.txt  SafetyAlert.txt  SafetyStatus.txt
RAG_DATA/extracted_texts/: AG-UIC-SW-964.txt
RAG_DATA/logTrainingData/: messages.txt
RAG_DATA/raw_pdfs/: AG-UIC-SW-964.txt
backend/: app.py  config.py  log_processor.py
backend/PowerLogAnalyser/: batteryStatusDecoder.py  powerLogAnalysis.py
backend/chatbot/: query_handler.py
backend/chunker/: powerchunk.py
backend/requirement_embedder/: embedder.py  pdf_extractor.py
backend/services/: chat_service.py  live_log_service.py  log_analysis_service.py
db/: lancedb_manager.py
db/lancedb/requirements.lance/_transactions/: 0-7b0ef29e-89fa-44f3-ab74-8973a205c01a.txn  1-f8a77f19-d5df-4616-9ec1-f4e5b7f28593.txn  10-0ec90eb6-8055-4cb9-ac99-71a1cc200977.txn  11-f630c829-4c1f-4dc7-8dc5-4521b3080a26.txn  12-fd5fecd5-05e8-4c66-acef-2132920ab1e4.txn  13-685b430f-0172-45a5-89cd-08f617e6252e.txn  14-057e77c1-8e63-4947-8c85-3842e0a1c17d.txn  15-65c2a731-99fe-4af6-a82b-01f5fd50483d.txn  16-d51d87b8-a176-4a21-9732-934c77ac2f7a.txn  17-118be8f4-372f-43fa-afad-80e486925b76.txn  2-a8842c86-862c-460d-8d3e-6929b9b32c0b.txn  (+7 more)
frontend/: depth_view.css  depth_view.html  depth_view.js  index.html  liveLogDisplay.js  script.js  style.css
(+34 files in other folders)
