[project]
name = "silverlogsagent"
version = "0.1.0"
description = "P&B Sentinal Agent is a specialized agent expertised in addressing Power and Battery related QA's and log analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-cors"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" }
]

[tool.hatch.build.targets.wheel]
packages = ["src/silverlogsagent"]